--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -23,7 +23,7 @@
     font: inherit;
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid #8a2b06;
+    border: 1px solid #15dd97;
     padding: 0.5rem 2rem;
     border-radius: 25px;
     margin-left: 1rem;
@@ -37,10 +37,10 @@
   }
   
   .actions .button--alt {
-    color: #8a2b06;
+    color: #15dd97;
   }
   
   .actions .button {
-    background-color: #8a2b06;
+    background-color: #15dd97;
     color: white;
   }
