--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     font: inherit;
     border: none;
-    background-color: #4d1601;
+    background-color: #12c788;
     color: white;
     padding: 0.75rem 3rem;
     display: flex;
@@ -14,7 +14,7 @@
   
   .button:hover,
   .button:active {
-    background-color: #2c0d00;
+    background-color: #0da26e;
   }
   
   .icon {
@@ -24,7 +24,7 @@
   }
   
   .badge {
-    background-color: #b94517;
+    background-color: #0da26e;
     padding: 0.25rem 1rem;
     border-radius: 25px;
     margin-left: 1rem;
@@ -33,7 +33,7 @@
   
   .button:hover .badge,
   .button:active .badge {
-    background-color: #92320c;
+    background-color: #12c788;
   }
   
   .bump {
@@ -57,3 +57,16 @@
       transform: scale(1);
     }
   }
+
+  @media (max-width: 668px) { 
+    .button {
+      padding: 0;
+      background-color: #15dd97;
+
+    }
+    .badge {
+      padding: 0rem 0rem;
+      background-color: #15dd97;
+      margin-left: 3px;
+    }
+   }
